# Automating_Structural_Design_of_a_building_Using_ML_and_APIs

./: 1.py  ANN_Vigas_As_v1.ipynb  ANN_Vigas_As_v2.ipynb  ANN_Vigas_As_v2_dbr.ipynb  ANN_Vigas_dopt_v1.ipynb  ANN_Vigas_dopt_v2.ipynb  ANN_Vigas_dopt_v2_dbr.ipynb  Area_Acero_As_ML.ipynb  BDVigas_Paper.xlsx  BDVigas_Paper_v2.xlsx  ImageToText.py  JAAD.DataBase.py  JAAD.NeuronalNetworks.ipynb  JAAD.fun#1.py  LICENSE  Makefile  Pipfile  README.md  SQL.sql  Test.ipynb  TestingFile.py  datos.xlsx  e3_evaldata.csv  e3_traindata.csv  finder2.py  prueba1.xlsx  pyproject.toml
API_ETABS/: #1.py  API_ETABS.py  API_Etabs.ipynb  Intro API ETABS 1.ipynb  Intro API ETABS 2.ipynb  Intro API ETABS 3.ipynb  MiIntento.py  Model.$et  Model.EDB  Model.K_I  Model.K_J  Model.K_M  Model.OUT  Model.Y  Model.Y$$  Model.Y00  Model.Y01  Model.Y02  Model.Y03  Model.Y04  Model.Y05  Model.Y_  Model.Y_1  Model.ebk  Model.msh  Tarea1.py  ejemplo.py  miintento.ipynb  my_functions.py
DB/: Autentico.py  Calcs.py  DB_DRB.py  DB_RB.py  Intento.py  bms_2.0 copy 1.py  bms_2.0 copy 2.py  bms_2.0.py  bms_flexion.py  bms_shear copy.py  bms_shear.py  cols_2.0.py  db - copia.xlsx  prueba.py
JAAD/: JAAD.db.xlsx
ML_SAAB_VIGAS/: Area_Acero_As_ML.ipynb  Diseno_Flexion_VDR_ML.ipynb  Test_Paper_Vigas_VDR.m  miArchivo_v4.xlsx  miArchivo_v5.xlsx  miArchivo_v6.xlsx  practicando_API.ipynb
RedesNeuronales/: Backup.ipynb  DB_RB.py  DRB.xlsx  NeuronalNetworks.ipynb  SRB.xlsx  amigo.xlsx  mdl_Asopt.keras  mdl_Asopt_p.keras  mdl_checkpoint.keras  mdl_dopt.keras  modelo_checkpoint.keras  nn_bms_1mdls.ipynb  practice.ipynb  (+8 more)
(+58 files in other folders)
